# django-superadmin

./: .gitignore  .pre-commit-config.yaml  LICENCE  Pipfile  README.md  build.sh  setup.cfg  setup.py
superadmin/: __init__.py  admin.py  apps.py  context_processors.py  decorators.py  forms.py  models.py  options.py  services.py  settings.py  shortcuts.py  signals.py  sites.py  utils.py
superadmin/management/commands/: base.py  createactions.py  createbasemenu.py  menu.py
superadmin/migrations/: 0001_action_menu.py  0002_auto_20211106_0726.py  unaccent_extension.py
superadmin/mixins/: __init__.py  breadcrumbs.py  filters.py  formsets.py  inlines.py  permissions.py  templates.py  urls.py  utils.py
superadmin/templatetags/: superadmin_forms.py  superadmin_utils.py
superadmin/views/: __init__.py  base.py  create.py  delete.py  detail.py  duplicate.py  filter.py  list.py  update.py
